--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link rel="preload" as="image" href=url(img/bg02.png) </link>
   <link rel="preload" as="image" href=url(img/bg03.png) </link>
   <link rel="preload" as="image" href=url(img/bg04.png) </link>
+  <link rel="preload" as="image" href=url(img/bg05.png) </link>
+  <link rel="preload" as="image" href=url(img/bg06.png) </link>
+  <link rel="preload" as="image" href=url(img/bg07.png) </link>
+  <link rel="preload" as="image" href=url(img/bg08.png) </link>
 </head>
 
 <body id="background">
@@ -19,13 +23,19 @@
   <img class="mySlides" src="img/bg02.png">
   <img class="mySlides" src="img/bg03.png">
   <img class="mySlides" src="img/bg04.png">
+  <img class="mySlides" src="img/bg05.png">
+  <img class="mySlides" src="img/bg06.png">
+  <img class="mySlides" src="img/bg07.png">
+  <img class="mySlides" src="img/bg08.png">
 
-  <p id="curseforgelink"><a href="https://www.curseforge.com/minecraft/modpacks/manicalchaos-2">DOWNLOAD THE PACK!</a></p>
+  <p id="curseforgelink"><a href="https://www.curseforge.com/minecraft/modpacks/manicalchaos-2">DOWNLOAD THE PACK!</a>
+  </p>
 
 
   <div id="countdowntimerdiv">
-    <img src="img/textBg.png" id="timerBgImg"></img>
-    <p id="timer"></p>
+    <img src="img/textBg.png" id="timerBgImg">
+    <p id="timer"></p></img>
+
   </div>
 
   <button onclick="plusDivs(-1)" id="leftButton"><img src="img/lArrow.png"
